@@ -228,6 +228,8 @@ x2goclient (4.1.1.0-0x2go1) UNRELEASED; urgency=medium
     - res/i18n/x2goclient_sv.ts: minor whitespace fixup.
     - res/i18n/x2goclient_*.ts: apply "XMDCP" -> "XDMCP" fix manually to
       translation files.
+    - res/i18n/x2goclient_nb_no.ts: remove obsolete comments (leading to
+      problems when regenerating translation files.)
   * x2goclient.spec:
     - Respect %{optflags} and pass QMAKE_STRIP=: to fix missing debug info
       issues.
